<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10sp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/userImageView"
        android:layout_width="172dp"
        android:layout_height="155dp"
        android:padding="5sp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/studentNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:textSize="12sp"
            android:text="@string/student_name"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/filteredIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:textSize="12sp"
            android:layout_marginBottom="5sp"
            android:text="@string/the_student_id_is" />


        <TextView
            android:id="@+id/classTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:padding="5sp"
            android:text="@string/students_class"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:padding="5sp"
            android:text="@string/students_email"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/roleNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/students_time_in"
            android:textSize="15sp"
            android:textStyle="italic"
            android:background="@color/colorGreenAccent"
            />

    </LinearLayout>
</LinearLayout>