<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:text="@string/the_student_id_comes_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/studentImageView"
        android:layout_width="359dp"
        android:layout_height="179sp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="match_parent"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/studentNameTextView"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/student_name"
            android:textColor="@color/colorPrimary"
            android:padding="5dp"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/students_class"
            android:id="@+id/classTextView"
            android:textSize="15sp"
            android:textStyle="italic"
            android:padding="5sp"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/students_email"
            android:id="@+id/emailTextView"
            android:textSize="15sp"
            android:textStyle="italic"
            android:padding="5sp"
            android:layout_marginBottom="5sp"/>

        <TextView
            android:id="@+id/roleNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/students_email"
            android:textSize="15sp"
            android:textStyle="italic" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="7dp">

        <TextView
            android:id="@+id/arrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/arrivalDate"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="39dp"
            android:layout_marginLeft="39dp"
            android:padding="5sp"
            android:text="@string/Time"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/arrivalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="263dp"
            android:layout_marginLeft="263dp"
            android:layout_marginBottom="30dp"
            android:padding="5sp"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>